--- a/BerkayUnutkan/style_berkay2.css
+++ b/BerkayUnutkan/style_berkay2.css
@@ -266,6 +266,24 @@ ul.dropdown li a:hover{
     width: 100%;
 }
 
+table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 20px;
+  }
+  
+  th, td {
+    text-align: left;
+    padding: 10px;
+    font-family: 'Inter', sans-serif;
+  }
+  
+  tr:nth-child(even){background-color: #f2f2f2}
+  
+  th {
+    background-color: #1F4591;
+    color: white;
+  }
 
 /*footer*/
 .foot{
