--- a/GloryMenga/style_Home_Glory.css
+++ b/GloryMenga/style_Home_Glory.css
@@ -1,10 +1,10 @@
+/*Important*/
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 
 @font-face {
     font-family: 'SIMPLIFICA';
     src: url(/SIMPLIFICA/SIMPLIFICA/SIMPLIFICA\ Typeface.ttf);
 }
-
 *{
     margin: 0;
     padding: 0;
@@ -15,9 +15,11 @@ body{
     background-color: #E4E7EC;
     height: 100%;
 }
+/*Important*/
+
 /*nav*/
 .top{
-    background-color: #E4E7EC;
+    background-color: rgba(228, 231, 236, 0.8);
     width: 100%;
     position: fixed;
 }
@@ -53,6 +55,7 @@ form{
     display: flex;
     align-items: center;
 }
+
 /*Searchbox*/
 input[type="text"]
 {
@@ -176,6 +179,7 @@ ul.dropdown li a:hover{
 .svg img{
     width: 100%;
 }
+/*nav*/
 
 .home{
     color: white;
@@ -184,6 +188,7 @@ ul.dropdown li a:hover{
     align-items: center;
     flex-direction: column;
     font-family: 'SIMPLIFICA';
+    margin-top: 120px;
     width: 100%;
     height: 900px;
     background-image: url(/images/school1.jpg);
@@ -197,7 +202,7 @@ ul.dropdown li a:hover{
         background-image: url(/images/school3.jpg);
     }
     75%{
-        background-image: url(/images/school4.jpg);
+        background-image: url(/images/school5.jpg);
     }
     100%{
         background-image: url(/images/school1.jpg);
@@ -267,6 +272,12 @@ ul.dropdown li a:hover{
     width: 70%;
     text-align: center;
 }
+.poster{
+    margin: 100px auto;
+    width: 85%;
+    display: flex;
+    justify-content: center;
+}
 /*footer*/
 .foot{
     display: flex;
@@ -292,7 +303,7 @@ ul.dropdown li a:hover{
     flex-direction: column;
     opacity: 80%;
     border-radius: 15px;
-    margin-top: 100px;
+    margin-top: 90px;
     width: 280px;
     height: 290px;
 }
@@ -331,7 +342,12 @@ ul.dropdown li a:hover{
 }
 .txtBlauw a{
     color: #000;
-   text-decoration: none;
+    text-decoration: none;
+}
+.txtBlauw a:hover{
+    color: #1F4591;
+    font-weight: 600;
+    text-decoration: none;
 }
 .icons{
     display: flex;
@@ -352,3 +368,4 @@ ul.dropdown li a:hover{
     line-height: 20px;
     width: 60%;
 }
+/*Footer*/
