--- a/GloryMenga/style_Opvoedingsproject_Glory.css
+++ b/GloryMenga/style_Opvoedingsproject_Glory.css
@@ -180,6 +180,39 @@ ul.dropdown li a:hover{
     width: 100%;
 }
 /*nav*/
+.container{
+    display: flex;
+    flex-direction: column;
+    margin-top: 150px;
+}
+.Opvoeding{
+    display: flex;
+    flex-direction: row;
+    padding: 80px 0px;
+    margin: 0 auto;
+    width: 85%;
+}
+.OP{
+    margin-top: 50px;
+    width: 60%;
+}
+.fotoOP{
+    display: flex;
+    justify-content: flex-end;
+    width: 50%;
+}
+.fotoOP img{
+    width: 70%;
+
+}
+.OP h1{
+    font-family: 'SIMPLIFICA';
+    margin-bottom: 60px;
+}
+.OP p{
+    font-family: 'Inter',sans-serif;
+    width: 80%;
+}
 /*footer*/
 .foot{
     display: flex;
