--- a/NassimEjja/style2.css
+++ b/NassimEjja/style2.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Archivo:wght@700&family=Cabin:wght@600&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Archivo:wght@700&family=Inter&display=swap");
+
+@font-face {
+	font-family: "SIMPLIFICA";
+	src: url(/SIMPLIFICA/SIMPLIFICA/SIMPLIFICA\ Typeface.ttf);
+}
 
 * {
 	margin: 0;
@@ -13,14 +15,7 @@ body {
 	background-color: #e4e7ec;
 	height: 100%;
 }
-/*Important*/
-
 /*nav*/
-.top {
-	background-color: rgba(228, 231, 236, 0.8);
-	width: 100%;
-	position: fixed;
-}
 .nav {
 	padding: 20px 0px;
 	margin: 0 auto;
@@ -53,7 +48,6 @@ form {
 	display: flex;
 	align-items: center;
 }
-
 /*Searchbox*/
 input[type="text"] {
 	font-family: "SIMPLIFICA";
@@ -70,7 +64,6 @@ input[type="submit"] {
 	font-family: "SIMPLIFICA";
 	font-size: 18px;
 	border-radius: 0 15px 15px 0;
-	letter-spacing: 1px;
 	border: none;
 	outline: none;
 	width: 30%;
@@ -78,10 +71,6 @@ input[type="submit"] {
 	cursor: pointer;
 	color: white;
 	background: #1f4591;
-	transition: 0.3s;
-}
-input[type="submit"]:hover {
-	background: #102649;
 }
 /*Searchbox*/
 
@@ -107,7 +96,7 @@ input[type="submit"]:hover {
 .menu ul li::after {
 	content: "";
 	width: 0%;
-	height: 1px;
+	height: 2px;
 	background: #1f4591;
 	display: block;
 	margin: auto;
@@ -175,145 +164,25 @@ ul.dropdown li a:hover {
 .svg img {
 	width: 100%;
 }
-/*nav*/
-
 .content {
-	display: flex;
-	flex-direction: column;
+	
 	width: 85%;
 	margin: 0 auto;
 }
-.historiek {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	padding: 50px 0 px;
-}
 
-.historiek div {
-	width: 30%;
-	border-radius: 5px;
+.title h1 {
+	font-family: "SIMPLIFICA";
+	font-size: 60px;
+	text-align: left;
+	padding: 60px 0px;
+	font-weight: 100;
 }
-.historiek h3 {
+.Links {
 	font-family: "inter";
-	font-size: 20px;
-	text-align: center;
-	background-color: #1f4591;
-	padding: 10px 0px;
+	font-size: 25px;
+    padding: 10px 0px;
 	border-radius: 15px;
 	color: #fff;
 	font-weight: 100;
-}
-.historiek p {
-	font-family: "inter";
-	line-height: 22px;
-	padding: 25px 0px;
-}
-
-.title {
-	font-family: "SIMPLIFICA";
-	font-size: 25px;
-	text-align: left;
-	padding: 60px 0px;
-}
-.title h1 {
-	font-weight: 100;
-	font-size: 60px;
-	margin-top: 50px;
-}
-
-h2 {
-	font-size: 35px;
-	font-weight: 100;
-	color: #000;
-	font-family: "simplifica";
-	padding-top: 10px;
-}
-.oude {
-	padding-bottom: 50px;
-}
-/*footer*/
-.foot {
-	display: flex;
-	justify-content: flex-end;
-	margin: 0 auto;
-	width: 85%;
-}
-.wit {
-	display: flex;
-	align-items: flex-end;
-	justify-content: flex-end;
-	background-color: #e4e7ec;
-	margin: 0 auto;
-	width: 85%;
-	height: 250px;
-}
-.kader {
-	font-family: "Inter", sans-serif;
-	position: absolute;
-	background-color: rgba(31, 69, 145, 0.9);
-	color: white;
-	display: flex;
-	flex-direction: column;
-	opacity: 80%;
-	border-radius: 15px;
-	margin-top: 100px;
-	width: 280px;
-	height: 290px;
-}
-.kader h1 {
-	margin-top: 25px;
-	margin-left: 13px;
-	margin-bottom: 18px;
-	font-size: 20px;
-}
-.blauw {
-	display: flex;
-	flex-direction: row;
-	background-color: rgba(31, 69, 145, 0.2);
-	width: 100%;
-	height: 220px;
-}
-.txtB {
-	font-family: "Inter", sans-serif;
-	display: flex;
-	flex-direction: row;
-	margin: 0 auto;
-	width: 80%;
-	padding-top: 40px;
-}
-
-.txtBlauw {
-	color: #000;
-	margin-right: 130px;
-}
-.txtBlauw h1 {
-	font-size: 20px;
-}
-.txtBlauw p {
-	font-size: 16px;
-	margin-top: 20px;
-}
-.txtBlauw a {
-	color: #000;
-	text-decoration: none;
-}
-.icons {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	margin-top: 15px;
-	margin-left: 40px;
-}
-.icon {
-	width: 14%;
-}
-.icon img {
-	width: 100%;
-}
-.icons p {
-	font-size: 14px;
-	margin-left: 13px;
-	line-height: 20px;
-	width: 60%;
+    
 }
