--- a/NordineElOuafrasi/Studierichtingen/studierichtingen.css
+++ b/NordineElOuafrasi/Studierichtingen/studierichtingen.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 
+/*Zie CSS*/
 @font-face {
     font-family: 'SIMPLIFICA';
     src: url(/NordineElOuafrasi/SIMPLIFICA\ Typeface.ttf);
