--- a/NordineElOuafrasi/std_rchtn.css
+++ b/NordineElOuafrasi/std_rchtn.css
@@ -1,3 +1,4 @@
+/*Zie CSS*/
 table {
     border-collapse: collapse;
     width: 100%;
@@ -14,7 +15,7 @@ table {
     width: 30%; /* Resize the first column to 30% of the table width */
     margin-right: 5%; /* Add a right margin of 5% */
   }
-  
+
   td {
     width: 70%; /* Resize the second column to 70% of the table width */
     margin-left: 5%; /* Add a left margin of 5% */
