--- a/GloryMenga/style_Opvoedingsproject_Glory.css
+++ b/GloryMenga/style_Opvoedingsproject_Glory.css
@@ -22,6 +22,7 @@ body{
     background-color: rgba(228, 231, 236, 0.8);
     width: 100%;
     position: fixed;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
 .nav{
     padding: 20px 0px;
@@ -215,22 +216,23 @@ ul.dropdown li a:hover{
     font-family: 'Inter',sans-serif;
     width: 80%;
 }
+.end{
+    padding-bottom: 100px;
+    background-image: url(/images/pattern.svg);
+}
 .stappen{
+    margin: 50px auto;
     width: 85%;
-    margin: 0 auto;
 }
 .stappen h1{
     font-family: 'SIMPLIFICA';
-    display: flex;
-    justify-content: flex-start;
     font-size: 24px;
 }
 .stap{
+    width: 50%;
     margin-top: 80px;
 }
 .stap h1{
-    display: flex;
-    justify-content: flex-start;
     text-decoration: none;
     margin-bottom: 20px;
     letter-spacing: 1px;
@@ -239,17 +241,57 @@ ul.dropdown li a:hover{
 }
 .stap p{
     font-family: 'Inter',sans-serif;
-    width: 70%;
+}
+.stappen2{
+    display: flex;
+    justify-content: flex-end;
+    margin: 0px auto;
+    width: 85%;
+}
+.stappen2 h1{
+    font-family: 'SIMPLIFICA';
+    font-size: 24px;
+}
+.stap2{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-top: 80px;
+    width: 50%;
+}
+.stap2 h1{
+    text-decoration: none;
+    margin-bottom: 20px;
+    letter-spacing: 1px;
+    font-weight: 100;
+    font-size: 40px;
+}
+.stap2 p{
+    font-family: 'Inter',sans-serif;
 }
 .titel{
-    margin: 0 auto;
-    width: 85%;
     font-size: 24px;
     font-family: 'SIMPLIFICA';
 }
 .titel h1{
     font-weight: 100;
     font-size: 60px;
+}
+.vl{
+    height: 388px;
+    border-left: 1px solid #808080;
+}
+.bewegingen{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(/images/Bewegingen.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 600px;
+    font-family: 'SIMPLIFICA';
+    font-size: 100px;
+    color: white;
 }
 /*footer*/
 .foot{
