--- a/NelleFavoreel/style_Nelle3.css
+++ b/NelleFavoreel/style_Nelle3.css
@@ -7,7 +7,7 @@
 .grid {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: repeat(2, 1fr);
+	grid-template-rows: repeat(3, 1fr);
 	font-family: "inter";
 	font-size: 15px;
 }
@@ -263,21 +263,28 @@ ul.dropdown li a:hover {
 
 .foto {
 	grid-column: 7/12;
-	grid-row: 1/8;
-	margin-top: 140px;
+	grid-row: 2/8;
 }
 .foto img {
-	width: 100%;
+	width: 70%;
 }
-.tekst {
+.text {
 	grid-column: 2/7;
-	margin-top: 100px;
-	margin-right: 30%;
+	grid-row: 2/3;
+	margin-right: 20%;
+	margin-top: 60px;
+	border-right: 1px solid black;
+}
+.text h3 {
+	margin-bottom: 40px;
+	margin-top: 40px;
+	margin-right: 90px;
 }
 .head {
-	margin-bottom: 140px;
+	grid-row: 1/2;
+	grid-column: 2/9;
 	font-family: "SIMPLIFICA";
-	margin-top: 40px;
+	margin-top: 20%;
 }
 .head h1 {
 	font-size: 60px;
