--- a/NelleFavoreel/style_Nelle4.css
+++ b/NelleFavoreel/style_Nelle4.css
@@ -10,6 +10,8 @@
 	grid-template-rows: repeat(3, 1fr);
 	font-family: "inter";
 	font-size: 15px;
+	margin-bottom: 100px;
+	margin-top: 50px;
 }
 * {
 	margin: 0;
@@ -259,16 +261,20 @@ ul.dropdown li a:hover {
 
 .foto img {
 	width: 90%;
+	margin-top: 30%;
 }
 .foto {
 	grid-column: 2/4;
-	grid-row: 2/3;
+	grid-row: 2/5;
 }
 .tekst {
 	grid-column: 4/8;
 	grid-row: 2/5;
-	margin-left: 50px;
 	font-weight: 100;
+	border-left: 1px solid black;
+}
+.tekst h3 {
+	margin-left: 40px;
 }
 .tekst2 {
 	grid-column: 8/12;
@@ -279,8 +285,11 @@ ul.dropdown li a:hover {
 	margin-top: 60px;
 	grid-column: 2/6;
 }
-h3 {
+.tekst h3 {
 	font-weight: 100;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	margin-right: 30px;
 }
 .head h1 {
 	font-family: "SIMPLIFICA";
