--- a/NelleFavoreel/style_Nelle5.css
+++ b/NelleFavoreel/style_Nelle5.css
@@ -254,7 +254,7 @@ ul.dropdown li a:hover {
 .grid {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: repeat(1, 1fr);
+	grid-template-rows: repeat(5, 1fr);
 	font-family: "inter";
 	font-size: 15px;
 	margin-bottom: 80px;
@@ -263,7 +263,11 @@ ul.dropdown li a:hover {
 	grid-column: 2/7;
 	grid-row: 1/2;
 	margin-top: 130px;
-	margin-right: 40px;
+	margin-right: 20%;
+	border-right: 1px solid black;
+}
+.schoolvisie p {
+	margin-right: 10%;
 }
 .schoolvisie h1 {
 	margin-bottom: 60px;
@@ -271,10 +275,16 @@ ul.dropdown li a:hover {
 	font-size: 60px;
 	font-weight: 100;
 }
+.schoolvisieFoto {
+	grid-column: 7/12;
+	grid-row: 1/2;
+	margin-top: 35%;
+}
 .bekwaam {
-	grid-column: 8/12;
-	grid-row: 1/4;
-	margin-top: 300px;
+	grid-column: 7/12;
+	grid-row: 2/3;
+	border-left: 1px solid black;
+	margin-left: 20%;
 }
 .bekwaam h1 {
 	margin-bottom: 30px;
@@ -282,11 +292,25 @@ ul.dropdown li a:hover {
 	font-size: 40px;
 	font-weight: 100;
 }
+.bekwaam p {
+	margin-left: 10%;
+}
+.bekwaam h1 {
+	margin-left: 10%;
+}
+.bekwaamFoto {
+	grid-row: 2/3;
+	grid-column: 3/7;
+	margin-top: 21%;
+}
+.bekwaamFoto img {
+	width: 100%;
+}
 .bewust {
 	grid-column: 2/7;
-	grid-row: 1/2;
-	margin-top: 650px;
-	margin-right: 40px;
+	grid-row: 3/3;
+	margin-right: 20%;
+	border-right: 1px solid black;
 }
 .bewust h1 {
 	margin-bottom: 30px;
@@ -294,21 +318,44 @@ ul.dropdown li a:hover {
 	font-size: 40px;
 	font-weight: 100;
 }
+.bewust p {
+	margin-right: 10%;
+}
+.bewustFoto {
+	grid-row: 3/4;
+	margin-top: 25%;
+	grid-column: 7/12;
+}
+.bewustFoto img {
+	width: 80%;
+}
 .bewogen {
 	grid-column: 8/12;
-	grid-row: 1/3;
-	margin-top: 1000px;
+	grid-row: 4/5;
+	border-left: 1px solid black;
 }
 .bewogen h1 {
 	margin-bottom: 30px;
 	font-family: "SIMPLIFICA";
 	font-size: 40px;
 	font-weight: 100;
+	margin-left: 10%;
+	margin-top: 15%;
+}
+.bewogen p {
+	margin-left: 10%;
+}
+.bewogenFoto {
+	grid-column: 3/7;
+	grid-row: 4/5;
+}
+.bewogenFoto img {
+	width: 100%;
+	margin-top: 31%;
 }
 .totSlot {
 	grid-column: 2/7;
-	grid-row: 1/4;
-	margin-top: 1500px;
+	grid-row: 5/6;
 	margin-right: 40px;
 }
 .totSlot h1 {
