--- a/GloryMenga/style_Opvoedingsproject_Glory.css
+++ b/GloryMenga/style_Opvoedingsproject_Glory.css
@@ -217,8 +217,8 @@ ul.dropdown li a:hover{
     width: 80%;
 }
 .end{
-    padding-bottom: 100px;
-    background-image: url(/images/pattern.svg);
+    padding-bottom: 420px;
+    background-image: url(/images/pattern2.svg);
 }
 .stappen{
     margin: 50px auto;
