--- a/GloryMenga/style_Home_Glory.css
+++ b/GloryMenga/style_Home_Glory.css
@@ -70,7 +70,7 @@ input[type="text"]
     padding: 0 20px;
     border-radius: 15px 0 0 15px;
 }
-input[type="submit"]
+button[type="submit"]
 {
     font-family: 'SIMPLIFICA';
     font-size: 18px;
@@ -85,7 +85,7 @@ input[type="submit"]
     background: #1F4591;
     transition: 0.3s;
 }
-input[type="submit"]:hover
+button[type="submit"]:hover
 {
     background: #102649;
 }
