--- a/NelleFavoreel/style_Nelle3.css
+++ b/NelleFavoreel/style_Nelle3.css
@@ -26,6 +26,12 @@ body {
 	height: 100%;
 }
 /*nav*/
+.top {
+	background-color: rgba(228, 231, 236, 0.8);
+	width: 100%;
+	position: fixed;
+	box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
 .nav {
 	padding: 20px 0px;
 	margin: 0 auto;
@@ -58,6 +64,7 @@ form {
 	display: flex;
 	align-items: center;
 }
+
 /*Searchbox*/
 input[type="text"] {
 	font-family: "SIMPLIFICA";
@@ -70,10 +77,11 @@ input[type="text"] {
 	padding: 0 20px;
 	border-radius: 15px 0 0 15px;
 }
-input[type="submit"] {
+button[type="submit"] {
 	font-family: "SIMPLIFICA";
 	font-size: 18px;
 	border-radius: 0 15px 15px 0;
+	letter-spacing: 1px;
 	border: none;
 	outline: none;
 	width: 30%;
@@ -81,6 +89,10 @@ input[type="submit"] {
 	cursor: pointer;
 	color: white;
 	background: #1f4591;
+	transition: 0.3s;
+}
+button[type="submit"]:hover {
+	background: #102649;
 }
 /*Searchbox*/
 
@@ -106,7 +118,7 @@ input[type="submit"] {
 .menu ul li::after {
 	content: "";
 	width: 0%;
-	height: 2px;
+	height: 1px;
 	background: #1f4591;
 	display: block;
 	margin: auto;
@@ -174,7 +186,7 @@ ul.dropdown li a:hover {
 .svg img {
 	width: 100%;
 }
-
+/*nav*/
 /*footer*/
 .foot {
 	display: flex;
@@ -273,7 +285,7 @@ ul.dropdown li a:hover {
 	grid-row: 2/3;
 	margin-right: 20%;
 	margin-top: 60px;
-	border-right: 1px solid black;
+	border-right: 1px solid #808080;
 }
 .text h3 {
 	margin-bottom: 40px;
@@ -297,4 +309,9 @@ ul.dropdown li a:hover {
 }
 h3 {
 	font-weight: 100;
+}
+.grid {
+	background-image: url(/images/pattern2.svg);
+	background-size: 100%;
+	padding: 100px 0px;
 }
