--- a/NelleFavoreel/style_Nelle5.css
+++ b/NelleFavoreel/style_Nelle5.css
@@ -16,6 +16,12 @@ body {
 	height: 100%;
 }
 /*nav*/
+.top {
+	background-color: rgba(228, 231, 236, 0.8);
+	width: 100%;
+	position: fixed;
+	box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
 .nav {
 	padding: 20px 0px;
 	margin: 0 auto;
@@ -48,6 +54,7 @@ form {
 	display: flex;
 	align-items: center;
 }
+
 /*Searchbox*/
 input[type="text"] {
 	font-family: "SIMPLIFICA";
@@ -60,10 +67,11 @@ input[type="text"] {
 	padding: 0 20px;
 	border-radius: 15px 0 0 15px;
 }
-input[type="submit"] {
+button[type="submit"] {
 	font-family: "SIMPLIFICA";
 	font-size: 18px;
 	border-radius: 0 15px 15px 0;
+	letter-spacing: 1px;
 	border: none;
 	outline: none;
 	width: 30%;
@@ -71,6 +79,10 @@ input[type="submit"] {
 	cursor: pointer;
 	color: white;
 	background: #1f4591;
+	transition: 0.3s;
+}
+button[type="submit"]:hover {
+	background: #102649;
 }
 /*Searchbox*/
 
@@ -96,7 +108,7 @@ input[type="submit"] {
 .menu ul li::after {
 	content: "";
 	width: 0%;
-	height: 2px;
+	height: 1px;
 	background: #1f4591;
 	display: block;
 	margin: auto;
@@ -164,7 +176,7 @@ ul.dropdown li a:hover {
 .svg img {
 	width: 100%;
 }
-
+/*nav*/
 /*footer*/
 .foot {
 	display: flex;
@@ -263,7 +275,7 @@ ul.dropdown li a:hover {
 	grid-row: 1/2;
 	margin-top: 130px;
 	margin-right: 20%;
-	border-right: 1px solid black;
+	border-right: 1px solid #808080;
 }
 .schoolvisie p {
 	margin-right: 10%;
@@ -282,7 +294,8 @@ ul.dropdown li a:hover {
 .bekwaam {
 	grid-column: 7/12;
 	grid-row: 2/3;
-	border-left: 1px solid black;
+	margin-top: 40px;
+	border-left: 1px solid #808080;
 	margin-left: 20%;
 }
 .bekwaam h1 {
@@ -309,7 +322,7 @@ ul.dropdown li a:hover {
 	grid-column: 2/7;
 	grid-row: 3/3;
 	margin-right: 20%;
-	border-right: 1px solid black;
+	border-right: 1px solid #808080;
 }
 .bewust h1 {
 	margin-bottom: 30px;
@@ -331,7 +344,7 @@ ul.dropdown li a:hover {
 .bewogen {
 	grid-column: 8/12;
 	grid-row: 4/5;
-	border-left: 1px solid black;
+	border-left: 1px solid #808080;
 }
 .bewogen h1 {
 	margin-bottom: 30px;
@@ -339,7 +352,6 @@ ul.dropdown li a:hover {
 	font-size: 40px;
 	font-weight: 100;
 	margin-left: 10%;
-	margin-top: 15%;
 }
 .bewogen p {
 	margin-left: 10%;
@@ -373,4 +385,9 @@ h3 {
 }
 p {
 	font-weight: 100;
+}
+.grid {
+	background-image: url(/images/pattern2.svg);
+	background-size: 100%;
+	padding: 100px 0px;
 }
