--- a/NelleFavoreel/style_Nelle.css
+++ b/NelleFavoreel/style_Nelle.css
@@ -7,22 +7,22 @@
 .locatie {
 	grid-column: 3/8;
 	grid-row: 2/3;
-	margin-top: 60px;
+	margin-top: 90px;
 }
 .locatieIcon {
 	grid-column: 2/3;
 	grid-row: 2/4;
-	margin-top: 60px;
+	margin-top: 90px;
 }
 .tel {
 	grid-column: 3/9;
 	grid-row: 3/5;
-	margin-top: 25px;
+	margin-top: 90px;
 }
 .telIcon {
 	grid-column: 2/3;
 	grid-row: 3/5;
-	margin-top: 20px;
+	margin-top: 80px;
 }
 
 .head h1 {
@@ -37,20 +37,22 @@
 }
 .mail {
 	grid-column: 3 / 9;
-	grid-row: 3/5;
-	margin-top: 90px;
+	grid-row: 4/7;
+	margin-top: 40px;
 }
 .mail h3 {
 	margin-top: 25px;
 }
 .mailIcon {
 	grid-column: 2/3;
-	grid-row: 4/8;
+	grid-row: 4/7;
+	margin-top: 130px;
 }
 .mapouter {
 	grid-column: 8/12;
 	grid-row: 2/10;
-	margin-top: 20px;
+	margin-top: 90px;
+	z-index: 15;
 }
 .grid {
 	display: grid;
