--- a/NelleFavoreel/style_Nelle4.css
+++ b/NelleFavoreel/style_Nelle4.css
@@ -290,6 +290,9 @@ ul.dropdown li a:hover {
 	margin-left: 40px;
 	font-weight: 100;
 }
+.tekst2 h3 {
+	font-weight: 100;
+}
 .tekst2 {
 	grid-column: 8/12;
 	grid-row: 2/7;
