--- a/BerkayUnutkan/style_berkay2.css
+++ b/BerkayUnutkan/style_berkay2.css
@@ -1,10 +1,10 @@
+/*Important*/
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 
 @font-face {
     font-family: 'SIMPLIFICA';
     src: url(/SIMPLIFICA/SIMPLIFICA/SIMPLIFICA\ Typeface.ttf);
 }
-
 *{
     margin: 0;
     padding: 0;
@@ -15,11 +15,14 @@ body{
     background-color: #E4E7EC;
     height: 100%;
 }
+/*Important*/
+
 /*nav*/
 .top{
     background-color: rgba(228, 231, 236, 0.8);
     width: 100%;
     position: fixed;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
 .nav{
     padding: 20px 0px;
@@ -53,6 +56,7 @@ form{
     display: flex;
     align-items: center;
 }
+
 /*Searchbox*/
 input[type="text"]
 {
@@ -66,11 +70,12 @@ input[type="text"]
     padding: 0 20px;
     border-radius: 15px 0 0 15px;
 }
-input[type="submit"]
+button[type="submit"]
 {
     font-family: 'SIMPLIFICA';
     font-size: 18px;
     border-radius: 0 15px 15px 0;
+    letter-spacing: 1px;
     border: none;
     outline: none;
     width: 30%;
@@ -78,6 +83,11 @@ input[type="submit"]
     cursor: pointer;
     color: white;
     background: #1F4591;
+    transition: 0.3s;
+}
+button[type="submit"]:hover
+{
+    background: #102649;
 }
 /*Searchbox*/
 
@@ -103,7 +113,7 @@ input[type="submit"]
 .menu ul li::after{
     content: '';
     width: 0%;
-    height: 2px;
+    height: 1px;
     background: #1F4591;
     display: block;
     margin: auto;
@@ -171,7 +181,7 @@ ul.dropdown li a:hover{
 .svg img{
     width: 100%;
 }
-
+/*nav*/
 
 
 
@@ -195,11 +205,13 @@ ul.dropdown li a:hover{
     padding-top: 40px;
     
     
+    
 }
 .container2{
     width: 85%;
     margin: 0 auto;
     padding-top: 170px;
+    
 }
 /*hoofdtitel*/
 .hoofdtitel{
@@ -284,7 +296,10 @@ th, td {
     
   }
 
-
+.end{
+    background-image: url(/images/pattern2.svg);
+    background-size:100%;
+}
 /*2*/
 .schoolbestuur2{
     display: flex;
