--- a/GloryMenga/style_Home_Glory.css
+++ b/GloryMenga/style_Home_Glory.css
@@ -23,18 +23,20 @@ body{
     width: 100%;
     position: fixed;
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    z-index: 10;
 }
 .nav{
-    padding: 20px 0px;
+    padding: 8px 0;
     margin: 0 auto;
     width: 85%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
+    z-index: 10;
 }
 .image{
-    width: 190px;
+    width: 180px;
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -190,7 +192,7 @@ ul.dropdown li a:hover{
     align-items: center;
     flex-direction: column;
     font-family: 'SIMPLIFICA';
-    margin-top: 120px;
+    margin-top: 80px;
     width: 100%;
     height: 900px;
     background-image: url(/images/school1.jpg);
@@ -275,6 +277,8 @@ ul.dropdown li a:hover{
     text-align: center;
 }
 .pattern{
+    display: flex;
+    flex-direction: column;
     background-image: url(/images/pattern.svg);
     background-size: 100%;
     padding: 100px 0px;
@@ -287,6 +291,12 @@ ul.dropdown li a:hover{
 }
 .poster img{
     width: 50%;
+}
+.vid{
+    display: flex;
+    justify-content: center;
+    padding-top: 100px;
+    padding-bottom: 0px;
 }
 .jan{
     width: 50%;
