--- a/GloryMenga/style_Opvoedingsproject_Glory.css
+++ b/GloryMenga/style_Opvoedingsproject_Glory.css
@@ -25,7 +25,7 @@ body{
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
 .nav{
-    padding: 20px 0px;
+    padding: 8px 0;
     margin: 0 auto;
     width: 85%;
     display: flex;
@@ -34,7 +34,7 @@ body{
     flex-direction: row;
 }
 .image{
-    width: 190px;
+    width: 180px;
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -184,7 +184,7 @@ ul.dropdown li a:hover{
 .container{
     display: flex;
     flex-direction: column;
-    margin-top: 150px;
+    margin-top: 80px;
 }
 .Opvoeding{
     display: flex;
