--- a/NelleFavoreel/style_Nelle.css
+++ b/NelleFavoreel/style_Nelle.css
@@ -335,3 +335,27 @@ ul.dropdown li a:hover {
 	background-size: 100%;
 	padding: 100px 0px;
 }
+@media (max-width: 480px) {
+	.head {
+		grid-row: 1/2;
+		grid-column: 2/6;
+		margin-top: 120px;
+	}
+	.locatie {
+		grid-column: 4/12;
+		grid-row: 2/3;
+		margin-top: 90px;
+	}
+	.mapouter {
+		display: none;
+	}
+	.tel {
+		grid-column: 4/9;
+		grid-row: 3/5;
+		margin-top: 90px;
+	}
+	.mail {
+		grid-column: 4 / 12;
+		grid-row: 4/7;
+	}
+}
