--- a/NelleFavoreel/style_Nelle2.css
+++ b/NelleFavoreel/style_Nelle2.css
@@ -309,3 +309,25 @@ ul.dropdown li a:hover {
 	background-size: 100%;
 	padding: 100px 0px;
 }
+@media (max-width: 480px) {
+	.head {
+		grid-row: 1/2;
+		grid-column: 2/12;
+	}
+	.een {
+		grid-column: 2/12;
+		grid-row: 2/10;
+		font-weight: 100;
+	}
+	.twee {
+		grid-column: 2/12;
+		grid-row: 4/10;
+		margin: 0;
+		margin-top: 40px;
+	}
+	.drie {
+		grid-row: 6/12;
+		grid-column: 2/12;
+		margin: 0;
+	}
+}
