--- a/NelleFavoreel/style_Nelle3.css
+++ b/NelleFavoreel/style_Nelle3.css
@@ -7,7 +7,7 @@
 .grid {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: repeat(3, 1fr);
+	grid-template-rows: repeat(7, auto);
 	font-family: "inter";
 	font-size: 15px;
 }
@@ -275,14 +275,15 @@ ul.dropdown li a:hover {
 
 .foto {
 	grid-column: 7/12;
-	grid-row: 2/8;
+	grid-row: 3/6;
+	margin-top: 5%;
 }
 .foto img {
 	width: 70%;
 }
 .text {
 	grid-column: 2/7;
-	grid-row: 2/3;
+	grid-row: 2/7;
 	margin-right: 20%;
 	margin-top: 60px;
 	border-right: 1px solid #808080;
@@ -314,4 +315,23 @@ h3 {
 	background-image: url(/images/pattern2.svg);
 	background-size: 100%;
 	padding: 100px 0px;
+}
+@media (max-width: 480px) {
+	.text {
+		grid-row: 1/2;
+		border-right: none;
+		grid-column: 2/12;
+		margin: 0px;
+		margin-top: 170px;
+	}
+	.text h3 {
+		margin: 0;
+	}
+	.foto {
+		grid-row: 2/3;
+		margin: 0;
+		width: 140%;
+		grid-column: 2/12;
+		margin-top: 80px;
+	}
 }
