--- a/NelleFavoreel/style_Nelle4.css
+++ b/NelleFavoreel/style_Nelle4.css
@@ -7,7 +7,7 @@
 .grid {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: repeat(6, 1fr);
+	grid-template-rows: repeat(12, auto);
 	font-family: "inter";
 	font-size: 15px;
 	margin-bottom: 100px;
@@ -278,12 +278,13 @@ ul.dropdown li a:hover {
 }
 .foto {
 	grid-column: 2/4;
-	grid-row: 2/5;
+	grid-row: 3/11;
+	margin-top: 10%;
 	border-right: 1px solid #808080;
 }
 .tekst {
 	grid-column: 4/8;
-	grid-row: 2/7;
+	grid-row: 2/12;
 	font-weight: 100;
 }
 .tekst h3 {
@@ -295,7 +296,7 @@ ul.dropdown li a:hover {
 }
 .tekst2 {
 	grid-column: 8/12;
-	grid-row: 2/7;
+	grid-row: 2/12;
 	margin-left: 50px;
 }
 .head {
