--- a/BerkayUnutkan/style_berkay.css
+++ b/BerkayUnutkan/style_berkay.css
@@ -23,18 +23,20 @@ body{
     width: 100%;
     position: fixed;
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    z-index: 10;
 }
 .nav{
-    padding: 20px 0px;
+    padding: 8px 0;
     margin: 0 auto;
     width: 85%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
+    z-index: 10;
 }
 .image{
-    width: 190px;
+    width: 180px;
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -145,7 +147,7 @@ button[type="submit"]:hover
 ul.dropdown{
     background-color: white;
     border-radius: 15px;
-    z-index: 30;
+    z-index: 10;
 }
 ul li ul.dropdown li{
     padding: 10px;
@@ -184,13 +186,13 @@ ul.dropdown li a:hover{
 /*nav*/
 
 /*firtstmain*/
+
 .first-main{
   width: 85%;
   margin: 0 auto;
-  padding-top: 120px;
+
  
 }
-
 h1.title{
   position: relative;
   line-height: 70px;
@@ -198,7 +200,7 @@ h1.title{
   font-family: 'SIMPLIFICA';
   font-size: 60px;
 	font-weight: 100;
-  margin-top: 40px;
+  margin-top: 120px;
 
 }
 .insch{
@@ -219,7 +221,7 @@ h1.title{
 }
 
 .first-main h2{
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 300;
   color: #000;
   font-family: 'Inter', sans-serif;
