--- a/NelleFavoreel/style_Nelle5.css
+++ b/NelleFavoreel/style_Nelle5.css
@@ -266,16 +266,15 @@ ul.dropdown li a:hover {
 .grid {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: repeat(5, auto);
+	grid-template-rows: repeat(25, auto);
 	font-family: "inter";
 	font-size: 15px;
 }
 .schoolvisie {
 	grid-column: 2/7;
-	grid-row: 1/2;
+	grid-row: 1/5;
 	margin-top: 130px;
 	margin-right: 20%;
-	border-right: 1px solid #808080;
 }
 .schoolvisie p {
 	margin-right: 10%;
@@ -287,15 +286,20 @@ ul.dropdown li a:hover {
 	font-weight: 100;
 }
 .schoolvisieFoto {
-	grid-column: 7/12;
-	grid-row: 1/2;
-	margin-top: 35%;
+	grid-column: 6/12;
+	grid-row: 2/5;
+	border-left: 1px solid #808080;
+	padding-top: 5%;
+	padding-bottom: 5%;
+}
+.schoolvisieFoto img {
+	margin-left: 40px;
 }
 .bekwaam {
-	grid-column: 7/12;
-	grid-row: 2/3;
+	grid-column: 6/12;
+	grid-row: 5/10;
 	margin-top: 40px;
-	border-left: 1px solid #808080;
+
 	margin-left: 20%;
 }
 .bekwaam h1 {
@@ -311,18 +315,21 @@ ul.dropdown li a:hover {
 	margin-left: 10%;
 }
 .bekwaamFoto {
-	grid-row: 2/3;
+	grid-row: 6/9;
 	grid-column: 3/7;
-	margin-top: 21%;
+	padding-top: 10%;
+	margin-top: 20%;
+	padding-bottom: 10%;
+	border-right: 1px solid #808080;
+	padding-right: 40px;
 }
 .bekwaamFoto img {
 	width: 100%;
 }
 .bewust {
 	grid-column: 2/7;
-	grid-row: 3/3;
+	grid-row: 10/15;
 	margin-right: 20%;
-	border-right: 1px solid #808080;
 }
 .bewust h1 {
 	margin-bottom: 30px;
@@ -334,17 +341,21 @@ ul.dropdown li a:hover {
 	margin-right: 10%;
 }
 .bewustFoto {
-	grid-row: 3/4;
-	margin-top: 25%;
-	grid-column: 7/12;
+	grid-row: 11/14;
+	grid-column: 6/12;
+	border-left: 1px solid #808080;
+	margin-left: 40px;
+	padding-top: 16%;
+	margin-top: 10%;
+	padding-bottom: 11%;
 }
 .bewustFoto img {
 	width: 80%;
+	margin-left: 40px;
 }
 .bewogen {
-	grid-column: 8/12;
-	grid-row: 4/5;
-	border-left: 1px solid #808080;
+	grid-column: 7/12;
+	grid-row: 15/20;
 }
 .bewogen h1 {
 	margin-bottom: 30px;
@@ -358,15 +369,20 @@ ul.dropdown li a:hover {
 }
 .bewogenFoto {
 	grid-column: 3/7;
-	grid-row: 4/5;
+	grid-row: 16/19;
+	padding-right: 40px;
+	padding-top: 5%;
+	padding-bottom: 5%;
+	margin-top: 70px;
+	border-right: 1px solid #808080;
 }
 .bewogenFoto img {
 	width: 100%;
-	margin-top: 31%;
+	margin-right: 40px;
 }
 .totSlot {
 	grid-column: 2/6;
-	grid-row: 5/6;
+	grid-row: 20/25;
 	margin-right: 40px;
 }
 .totSlot h1 {
