--- a/GloryMenga/style_Home_Glory.css
+++ b/GloryMenga/style_Home_Glory.css
@@ -283,22 +283,13 @@ ul.dropdown li a:hover{
     background-size: 100%;
     padding: 100px 0px;
 }
-.poster{
-    margin: 0px auto;
-    width: 85%;
-    display: flex;
-    justify-content: center;
-}
-.poster img{
-    width: 50%;
-}
 video{
     width: 1000px;
 }
 .vid{
     display: flex;
     justify-content: center;
-    padding-top: 100px;
+    padding-top: 20px;
     padding-bottom: 0px;
 }
 .jan{
@@ -505,5 +496,64 @@ video{
 /*Footer*/
 
 @media screen and (max-width: 480px) {
-    
+    .txtI{
+        display: none;
+    }
+    .box{
+        display: none;
+    }
+    /*hamburger menu*/
+    .top{
+        box-shadow: none;
+        background-color: #E4E7EC;
+        position: relative;
+    }
+    .image{
+        width: 50px;
+    }
+    video{
+        width: 370px;
+    }
+    .inschrijven{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        text-decoration: none;
+        width:  100%;
+        background-color: transparent;
+        height: 150px;
+        font-size: 40px;
+    }
+    .studierichtingen{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        text-decoration: none;
+        margin-left: 0px;
+        margin-top: 25px;
+        width:  100%;
+        height: 150px;
+        font-size: 40px;
+    }
+    .wit{
+        display: none;
+    }
+    .blauw{
+        display: none;
+    }
+    .last{
+        display: flex;
+        justify-content: center;
+        padding: 20px 0;
+    }
+    .einde{
+        justify-content: flex-start;
+        align-items: flex-start;
+        flex-direction: column;
+    }
+    .home{
+        margin-top: 0px;
+    }
 }
