--- a/GloryMenga/style_Home_Glory.css
+++ b/GloryMenga/style_Home_Glory.css
@@ -196,6 +196,7 @@ ul.dropdown li a:hover{
     width: 100%;
     height: 900px;
     background-image: url(/images/school1.jpg);
+    background-size: cover;
     animation: slide 30s infinite;
 }
 @keyframes slide{
